# combinators-dataset

./: .gitignore  README.md  pyproject.toml
combinators/: __init__.py  combinator.py  dataset.jsonl  main.py
combinators-dataset/: dataset.jsonl  main.py
combinators/parsers/: __init__.py  combinator.py  type.py
combinators/typing/: __init__.py  arrow.py  base.py  implication.py  variable.py
tests/: test_combinator_parser.py  test_combinators.py  test_type_parser.py  test_typing.py
